ASCII art no longer spills onto rest of page

--- a/styles.css
+++ b/styles.css
@@ -22,9 +22,9 @@ html {
     margin: 20px auto;
     box-shadow: 0 0 0 2px #FFA30E;
     border-radius: 10px;
-    min-width: 700px;
     padding-bottom: 10px;
-    max-width: 80%;
+    max-width: 50%;
+    min-width: 830px;
 }
 
 
